Fix err pag Labs

--- a/labs.html
+++ b/labs.html
@@ -5,19 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
     <link rel="stylesheet" href="./css/external_styles.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
+  <div class="profile-container">
+    <div class="profile-header">
     <header>
         <h1>Exercícios de laboratórios</h1>  
     </header>
     <article>
         <h4>Extraído de: </h4>
-        <a href="https://elearn2324.upt.pt/pluginfile.php/43198/mod_resource/content/2/PT_HTML_exercicios.pdf">Moodle Unidade LTW</a>
+        <a href="https://elearn2324.upt.pt/pluginfile.php/43198/mod_resource/content/2/PT_HTML_exercicios.pdf"><img class="dctupt" src="./img/moodle.png" alt="moodle"></a>
         <br/>
+    </div>
         <h2>Laboratório 1 ( HTML )</h2>
         <table>
           <br/>
-            <tr>
+            <tr class="titulostabl">
               <th>Pagina 1</th>
               <th>Pagina 2</th>
               <th>Pagina 3</th>
@@ -30,7 +37,7 @@
           <h2>Laboratório 2 ( CSS )</h2>
           <table>
             <br/>
-              <tr>
+              <tr class="titulostabl">
                 <th>Pagina 1</th>
                 <th>Pagina 2</th>
                 <th>Pagina 3</th>
@@ -43,7 +50,7 @@
             <h2>Laboratório 3 ( JAVASCRIPT )</h2>
             <table>
               <br/>
-                <tr>
+                <tr class="titulostabl">
                   <th>Pagina 1</th>
                   <th>Pagina 2</th>
                   <th>Pagina 3</th>
@@ -53,10 +60,10 @@
                   <td class="image-cell2"><img src="./img/pag3.png"></td>
                 </tr>
               </table>
+              <br/>
+      <a href="index.html"><button class="boton-moderno">Atras</button></a>
       </article>
-      <a href="index.html" class="back-to-top">
-        <img src="./img/back.svg"/>
-        Atras
-    </a>
+      
+  </div>
 </body>
 </html>
