--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <hr class="linea-elegante">
     <div class="profile-body">
       <section class="about-me">
-        <h2>About me</h2>
-          <p>🖥️ Software Engineer, PMP, DevOps 🚢, enthusiastic about technology and its correct application, enterprising 🦾</p>
+        <h2>Sobre mim</h2>
+          <p>🖥️ Software Engineer, PMP, DevOps 🚢, entusiasta da tecnologia e da sua correcta aplicação, empreendedor 🦾</p>
           <a href="https://github.com/migueloo-coder"><img class="aboutgit" src="./img/github.png" alt="upt"></a>
           <a href="mailto:48547@alunos.upt.pt"><img class="aboutgit" src="./img/mail.svg" alt="upt"></a>
     </div>
