--- a/labs.html
+++ b/labs.html
@@ -22,43 +22,68 @@
         <br/>
     </div>
         <h2>Laboratório 1 ( HTML )</h2>
-        <table>
+        <table class="titulostabl">
           <br/>
-            <tr class="titulostabl">
+            <tr>
               <th>Pagina 1</th>
               <th>Pagina 2</th>
+            <tr>
+              <td class="image-cell2"><img src="./img/lab1/pag1.png"></td>
+              <td class="image-cell2"><img src="./img/lab1/pag2.png"></td>
+            </tr>
+            <tr>
               <th>Pagina 3</th>
             <tr>
-              <td class="image-cell2"><img src="./img/pag1.png"></td>
-              <td class="image-cell2"><img src="./img/pag2.png"></td>
-              <td class="image-cell2"><img src="./img/pag3.png"></td>
+              <td class="image-cell2"><img src="./img/lab1/pag3.png"></td>
             </tr>
           </table>
           <h2>Laboratório 2 ( CSS )</h2>
-          <table>
+          <table class="titulostabl">
             <br/>
-              <tr class="titulostabl">
+              <tr>
                 <th>Pagina 1</th>
                 <th>Pagina 2</th>
-                <th>Pagina 3</th>
               <tr>
-                <td class="image-cell2"><img src="./img/pag1.png"></td>
-                <td class="image-cell2"><img src="./img/pag2.png"></td>
-                <td class="image-cell2"><img src="./img/pag3.png"></td>
+                <td class="image-cell2"><img src="./img/lab2/pag1lab2.png"></td>
+                <td class="image-cell2"><img src="./img/lab2/pag2lab2.png"></td>
+              </tr>
+              <tr>
+                <th>Pagina 3</th>
+                <th>Pagina 4</th>
+              <tr>
+                <td class="image-cell2"><img src="./img/lab2/pag3lab2.png"></td>
+                <td class="image-cell2"><img src="./img/lab2/pag4lab2.png"></td>
+              </tr>
+              <tr>
+                <th>Pagina 5</th>
+              <tr>
+                <td class="image-cell2"><img src="./img/lab2/pag5lab2.png"></td>
               </tr>
             </table>
             <h2>Laboratório 3 ( JAVASCRIPT )</h2>
-            <table>
+            <table  class="titulostabl">
               <br/>
-                <tr class="titulostabl">
-                  <th>Pagina 1</th>
-                  <th>Pagina 2</th>
-                  <th>Pagina 3</th>
-                <tr>
-                  <td class="image-cell2"><img src="./img/pag1.png"></td>
-                  <td class="image-cell2"><img src="./img/pag2.png"></td>
-                  <td class="image-cell2"><img src="./img/pag3.png"></td>
-                </tr>
+              <tr>
+                <th>Pagina 1</th>
+                <th>Pagina 2</th>
+              <tr>
+                <td class="image-cell2"><img src="./img/lab3/pag1lab3.png"></td>
+                <td class="image-cell2"><img src="./img/lab3/pag2lab3.png"></td>
+              </tr>
+              <tr>
+                <th>Pagina 3</th>
+                <th>Pagina 4</th>
+              <tr>
+                <td class="image-cell2"><img src="./img/lab3/pag3lab3.png"></td>
+                <td class="image-cell2"><img src="./img/lab3/pag4lab3.png"></td>
+              </tr>
+              <tr>
+                <th>Pagina 5</th>
+                <th>Pagina 6</th>
+              <tr>
+                <td class="image-cell2"><img src="./img/lab3/pag5lab3.png"></td>
+                <td class="image-cell2"><img src="./img/lab3/pag6lab3.png"></td>
+              </tr>
               </table>
               <br/>
       <a href="index.html"><button class="boton-moderno">Atras</button></a>
