--- a/fuc.html
+++ b/fuc.html
@@ -8,22 +8,24 @@
 </head>
 
 <body>
-    <header>
+    <header class="header-fuc">
         <h1>Ficha da Unidade Curricular: </h1>
         <h2>Sistemas Web </h2>
     </header>
-    <nav>
+  </br>
+    <nav class="nav-lingua">
         <a href=" ">Versão em Portugues</a>
         <a href=" ">Versão em Ingles</a>
     </nav>
     </br>
+  <div class="prin">
     <h3>Objetivos e Conteudos</h3>
     <section>
-        <article>
+        <article class="article">
             <h4>Objetivos da aprendisagem</h4>
             <a>Depois de concluída a unidade curricular, o estudante deverá ser capaz de:</a>
             <ul>
-                <li>Elaborar proietos web. aplicando metodologia/Processo de desenvolvimento de software. desde a fase de analise de reauisitos. ate a publicacao da aplicacao web.</li>
+                <li>Elaborar projetos web. aplicando metodologia/Processo de desenvolvimento de software. desde a fase de analise de reauisitos. ate a publicacao da aplicacao web.</li>
                 <li>Programar aplicações web usando HTML5, CSS3 e JavaScript 5 fazendo uso de armazenamento local, processamento assincrono e redireccionamento no servidor (através de PHP/Node js) para web services existentes.</li>
                 <li>Inferir, através da experimentação e avaliação crítica, na importância das frameworks e APIs JavaScript e CSS, no desenvolvimento de aplicações web.</li>
             </ul>
@@ -32,7 +34,8 @@
                 Back to Top
               </a>  
          </article>
-         <article>
+        </br>
+         <article class="article">
             <h4>Conteudos Programaticos</h4>
             <ol> 
                 <dl>
@@ -72,19 +75,22 @@
                         </ol>
                 </dl>
             </ol>
+            <a href="#" class="back-to-top">
+              <img src="./img/top.svg"/>
+              Back to Top
+            </a> 
          </article>
-         <a href="#" class="back-to-top">
-            <img src="./img/top.svg"/>
-            Back to Top
-          </a>       
+               
     </section>
+  </div>
     </br>
-    <section>
+    <section class="prin">
         <h2>Bibliografia</h2>
-        <article>
+      </br>
+        <article class="article">
             <h3>Recomendada</h3>
             <table>
-                <tr>
+                <tr class="enca">
                   <th>Autor(es)</th>
                   <th>Ano</th>
                   <th>Titulo</th>
@@ -121,10 +127,11 @@
                 Back to Top
               </a> 
           </article>
-          <article>
+          </br>
+          <article class="article">
             <h3>Complementar</h3>
             <table>
-                <tr>
+                <tr class="enca">
                   <th>Autor(es)</th>
                   <th>Ano</th>
                   <th>Titulo</th>
@@ -161,7 +168,8 @@
                 Back to Top
               </a> 
           </article>
-          <article>
+          </br>
+          <article class="article">
             <h3>Webgrafia</h3>
             <a href="#">HTMLS specification, W3C Candidate Recommendation 6 August 2013</a></br>
             <a href="#">CSS standards and drafts</a></br>
