--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 <body>
   <main>
+    <div class="language-switcher">
+      <button class="boton-moderno-lan" id="lang-en" onclick="changeLanguage('en')">EN</button>
+      <button class="boton-moderno-lan" id="lang-es" onclick="changeLanguage('es')">ES</button>
+      <button class="boton-moderno-lan" id="lang-pt" onclick="changeLanguage('pt')">PT</button>
+    </div>
     <div class="profile-container">
       <div class="profile-header">
         <h1>LABORATORIO DE TECNOLOGIAS WEB</h1>
