--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <a href="login.html"><button class="boton-moderno">Login</button></a>
           <a href="comentario.html"><button class="boton-moderno">Comnetario</button></a>
           <a href="fuc.html"><button class="boton-moderno">FUC</button></a>
+          <a href="./calculator/calculator.html"><button class="boton-moderno">CalculatorC</button></a>
     </div>
     <footer class="site-footer">
       <div class="footer-content">
