Update Project 20 MARCH 2024

--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -12,23 +12,24 @@
     <div class="calculator">
         <input type="text" class="display" value="0" disabled>
    
-        <div class="keys">
+        <div id="divKey" class="keys">
             <button type="button" class="operator" value="+">+</button>
             <button type="button" class="operator" value="-">-</button>
             <button type="button" class="operator" value="&times">x</button>
             <button type="button" class="operator" value="&divide">/</button>
-            <button type="button" value="1">1</button>
-            <button type="button" value="2">2</button>
-            <button type="button" value="3">3</button>
-            <button type="button" value="4">4</button>
-            <button type="button" value="5">5</button>
-            <button type="button" value="6">6</button>
             <button type="button" value="7">7</button>
             <button type="button" value="8">8</button>
             <button type="button" value="9">9</button>
-            <button type="button" class="decimal" value=".">.</button>
+            <button type="button" value="4">4</button>
+            <button type="button" value="5">5</button>
+            <button type="button" value="6">6</button>
+            <button type="button" value="1">1</button>
+            <button type="button" value="2">2</button>
+            <button type="button" value="3">3</button>
+            <button type="button" value="0">0</button>
+            <button id="btdeci" type="button" class="decimal" value=".">.</button>
             <button type="button" class="clear" value="clear">AC</button>
-            <button type="button" class="equals" value="equals">=</button>
+            <button id="btequals" type="button" class="equals" value="equals">=</button>
         </div>
     </div>
     <script src="script.js" type="text/javascript"></script>
