add Labs 4 and 5

--- a/comentario.html
+++ b/comentario.html
@@ -47,7 +47,7 @@
     </form>
     <br/>
     <a href="index.html" class="back-to-top">
-        <img src="./img/back.svg"/>
+        <img src="./res/back.svg"/>
         Atras
     </a> 
 </body>
