--- a/fuc.html
+++ b/fuc.html
@@ -30,7 +30,7 @@
                 <li>Inferir, através da experimentação e avaliação crítica, na importância das frameworks e APIs JavaScript e CSS, no desenvolvimento de aplicações web.</li>
             </ul>
             <a href="#" class="back-to-top">
-                <img src="./img/top.svg" />
+                <img src="./res/top.svg" />
                 Back to Top
               </a>  
          </article>
@@ -76,7 +76,7 @@
                 </dl>
             </ol>
             <a href="#" class="back-to-top">
-              <img src="./img/top.svg"/>
+              <img src="./res/top.svg"/>
               Back to Top
             </a> 
          </article>
@@ -119,11 +119,11 @@
                   <td>NODE JS- CONSTRUÇÃO DE APLICAÇÕES WEB</td>
                   <td>FCA, Lisboa</td>
                   <td>978-972-722-860-7</td>
-                  <td class="image-cell"><img src="img/nodejs.png"></td>
+                  <td class="image-cell"><img src="res/nodejs.png"></td>
                 </tr>                
               </table>
             <a href="#" class="back-to-top">
-                <img src="./img/top.svg"/>
+                <img src="./res/top.svg"/>
                 Back to Top
               </a> 
           </article>
@@ -164,7 +164,7 @@
                 </tr>                
               </table>
             <a href="#" class="back-to-top">
-                <img src="./img/top.svg"/>
+                <img src="./res/top.svg"/>
                 Back to Top
               </a> 
           </article>
@@ -177,7 +177,7 @@
             <a href="#">Mozilla Developer Network</a></br>
              </br>
             <a href="#" class="back-to-top">
-                <img src="./img/top.svg"/>
+                <img src="./res/top.svg"/>
                 Back to Top
               </a> 
             </br>
@@ -185,7 +185,7 @@
     </section>
     </br>
     <a href="index.html" class="back-to-top">
-      <img src="./img/back.svg"/>
+      <img src="./res/back.svg"/>
       Atras
   </a> 
 </body>
