--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="profile-container">
       <div class="profile-header">
         <h1>LABORATORIO DE TECNOLOGIAS WEB</h1>
-        <img class="dctupt" src="./img/Logo_Blue_H_Neg.svg" alt="upt">
-        <img class="imgprof" src="./img/miguelp.JPEG" alt="Miguel A Pinzon C">
-        <img class="dctupt" src="./img/Logo_DCT_H_Neg(1).png" alt="DCTUPT">
+        <img class="dctupt" src="./res/Logo_Blue_H_Neg.svg" alt="upt">
+        <img class="imgprof" src="./res/miguelp.JPEG" alt="Miguel A Pinzon C">
+        <img class="dctupt" src="./res/Logo_DCT_H_Neg(1).png" alt="DCTUPT">
         <h2>Miguel Angel Pinzon Caro</h2>
         <p>( Migueloo-coder )</p>
         <h2>48547</h2>
@@ -33,8 +33,8 @@
       <section class="about-me">
         <h2>Sobre mim</h2>
           <p>🖥️ Software Engineer, PMP, DevOps 🚢, entusiasta da tecnologia e da sua correcta aplicação, empreendedor 🦾</p>
-          <a href="https://github.com/migueloo-coder"><img class="aboutgit" src="./img/github.png" alt="upt"></a>
-          <a href="mailto:48547@alunos.upt.pt"><img class="aboutgit" src="./img/mail.svg" alt="upt"></a>
+          <a href="https://github.com/migueloo-coder"><img class="aboutgit" src="./res/github.png" alt="upt"></a>
+          <a href="mailto:48547@alunos.upt.pt"><img class="aboutgit" src="./res/mail.svg" alt="upt"></a>
     </div>
     <hr class="linea-elegante">
     <div class="labs-body">
@@ -47,6 +47,8 @@
           <a href="comentario.html"><button class="boton-moderno">Comnetario</button></a>
           <a href="fuc.html"><button class="boton-moderno">FUC</button></a>
           <a href="./calculator/calculator.html"><button class="boton-moderno">Calculator</button></a>
+          <a href="./Lab4-Bootstrap/indexBootstrap.html"><button class="boton-moderno">Bootstrap</button></a>
+          <a href="./Lab5-Jquery/indexlab5.html"><button class="boton-moderno">Video Watcher</button></a>
     </div>
     <footer class="site-footer">
       <div class="footer-content">
