--- a/labs.html
+++ b/labs.html
@@ -18,7 +18,7 @@
     </header>
     <article>
         <h4>Extraído de: </h4>
-        <a href="https://elearn2324.upt.pt/pluginfile.php/43198/mod_resource/content/2/PT_HTML_exercicios.pdf"><img class="dctupt" src="./img/moodle.png" alt="moodle"></a>
+        <a href="https://elearn2324.upt.pt/pluginfile.php/43198/mod_resource/content/2/PT_HTML_exercicios.pdf"><img class="dctupt" src="./res/moodle.png" alt="moodle"></a>
         <br/>
     </div>
         <h2>Laboratório 1 ( HTML )</h2>
@@ -28,13 +28,13 @@
               <th>Pagina 1</th>
               <th>Pagina 2</th>
             <tr>
-              <td class="image-cell2"><img src="./img/lab1/pag1.png"></td>
-              <td class="image-cell2"><img src="./img/lab1/pag2.png"></td>
+              <td class="image-cell2"><img src="./res/lab1/pag1.png"></td>
+              <td class="image-cell2"><img src="./res/lab1/pag2.png"></td>
             </tr>
             <tr>
               <th>Pagina 3</th>
             <tr>
-              <td class="image-cell2"><img src="./img/lab1/pag3.png"></td>
+              <td class="image-cell2"><img src="./res/lab1/pag3.png"></td>
             </tr>
           </table>
           <h2>Laboratório 2 ( CSS )</h2>
@@ -44,20 +44,20 @@
                 <th>Pagina 1</th>
                 <th>Pagina 2</th>
               <tr>
-                <td class="image-cell2"><img src="./img/lab2/pag1lab2.png"></td>
-                <td class="image-cell2"><img src="./img/lab2/pag2lab2.png"></td>
+                <td class="image-cell2"><img src="./res/lab2/pag1lab2.png"></td>
+                <td class="image-cell2"><img src="./res/lab2/pag2lab2.png"></td>
               </tr>
               <tr>
                 <th>Pagina 3</th>
                 <th>Pagina 4</th>
               <tr>
-                <td class="image-cell2"><img src="./img/lab2/pag3lab2.png"></td>
-                <td class="image-cell2"><img src="./img/lab2/pag4lab2.png"></td>
+                <td class="image-cell2"><img src="./res/lab2/pag3lab2.png"></td>
+                <td class="image-cell2"><img src="./res/lab2/pag4lab2.png"></td>
               </tr>
               <tr>
                 <th>Pagina 5</th>
               <tr>
-                <td class="image-cell2"><img src="./img/lab2/pag5lab2.png"></td>
+                <td class="image-cell2"><img src="./res/lab2/pag5lab2.png"></td>
               </tr>
             </table>
             <h2>Laboratório 3 ( JAVASCRIPT )</h2>
@@ -67,25 +67,49 @@
                 <th>Pagina 1</th>
                 <th>Pagina 2</th>
               <tr>
-                <td class="image-cell2"><img src="./img/lab3/pag1lab3.png"></td>
-                <td class="image-cell2"><img src="./img/lab3/pag2lab3.png"></td>
+                <td class="image-cell2"><img src="./res/lab3/pag1lab3.png"></td>
+                <td class="image-cell2"><img src="./res/lab3/pag2lab3.png"></td>
               </tr>
               <tr>
                 <th>Pagina 3</th>
                 <th>Pagina 4</th>
               <tr>
-                <td class="image-cell2"><img src="./img/lab3/pag3lab3.png"></td>
-                <td class="image-cell2"><img src="./img/lab3/pag4lab3.png"></td>
+                <td class="image-cell2"><img src="./res/lab3/pag3lab3.png"></td>
+                <td class="image-cell2"><img src="./res/lab3/pag4lab3.png"></td>
               </tr>
               <tr>
                 <th>Pagina 5</th>
                 <th>Pagina 6</th>
               <tr>
-                <td class="image-cell2"><img src="./img/lab3/pag5lab3.png"></td>
-                <td class="image-cell2"><img src="./img/lab3/pag6lab3.png"></td>
+                <td class="image-cell2"><img src="./res/lab3/pag5lab3.png"></td>
+                <td class="image-cell2"><img src="./res/lab3/pag6lab3.png"></td>
               </tr>
               </table>
               <br/>
+              <h2>Laboratório 4 ( BOOTSTRAP )</h2>
+            <table  class="titulostabl">
+              <br/>
+              <tr>
+                <th>Pagina 1</th>
+                <th>Pagina 2</th>
+              <tr>
+                <td class="image-cell2"><img src="./res/lab4/pag1lab4.png"></td>
+                <td class="image-cell2"><img src="./res/lab4/pag2lab4.png"></td>
+              </tr>
+              </table>
+              <br/>
+              <h2>Laboratório 5 ( J-Query )</h2>
+            <table  class="titulostabl">
+              <br/>
+              <tr>
+                <th>Pagina 1</th>
+                <th>Pagina 2</th>
+              <tr>
+                <td class="image-cell2"><img src="./res/lab5/pag1lab5.png"></td>
+                <td class="image-cell2"><img src="./res/lab5/pag2lab5.png"></td>
+              </tr>
+              </table>
+
       <a href="index.html"><button class="boton-moderno">Atras</button></a>
       </article>
       
