--- a/Lab4-Bootstrap/indexBootstrap.html
+++ b/Lab4-Bootstrap/indexBootstrap.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-    <link rel="stylesheet" href="./css/external_styles.css" type="text/css">
+    <link rel="stylesheet" href="./stylesboots.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 </head>
 <body>
-
+    <div class="profile-container">
+        <div class="profile-header">
+          <img class="dctupt" src="../res/ponido.png">
+          <h1>Yo Habia Ponido mi codigo aqui</h1>
+        </div>
+      </div>
 </body>
 </html>
