--- a/Lab5-Jquery/indexlab5.html
+++ b/Lab5-Jquery/indexlab5.html
@@ -21,13 +21,17 @@
      
         <div class="row">
           <div class="col-md-3">
+            <img class="dctupt" src="../res/lab5/Resources/1.jpg">
             <a href="https://youtu.be/z3U0udLH974">Trip through the 80s</a><br/>
+            <img class="dctupt" src="../res/lab5/Resources/2.jpg">
             <a href="https://youtu.be/epUk3T2Kfno">Otters Holding Hands</a><br/>
+            <img class="dctupt" src=".../res/lab5/Resources/3.jpeg">
             <a href="https://youtu.be/il2IrgFHfsg">The Ooooh Cat</a><br/>
            </div>
          </div>
         </div>
-
-    <a href="../index.html"><button class="boton-moderno">Atras</button></a>
+        <div class="container" cellspacing="1">
+            <a href="../index.html"><button class="boton-moderno">Atras</button></a>
+        </div>
 </body>
 </html>
